# agentTeam

./: .gitignore  README.md  pyproject.toml
agentteam/: __init__.py  cli.py  config.py  logging_config.py  plugins.py
agentteam/api/: __init__.py  auth.py  deps.py  events.py  run_manager.py  serializer.py  server.py  store.py  webhook.py
agentteam/domain/: __init__.py  agent.py  approval.py  library.py  mcp_server.py  serializer.py  team.py  worker.py
agentteam/models/: provider.py
agentteam/presets/: __init__.py  content_marketing.py  customer_support.py  data_analysis.py  enterprise_dev.py  installer.py
agentteam/runtime/: __init__.py  approval.py  errors.py  evolution.py  evolution_prompts.py  graph.py  nodes.py  pep.py  skills.py  state.py  trace.py
agentteam/security/: __init__.py  crypto.py
agentteam/storage/: admin_audit.py  audit.py  base.py  db.py  evolution.py  library.py  quotas.py  runs.py  skills_meta.py  teams.py  users.py  utils.py
agentteam/tools/: mcp.py  registry.py
data/: agentteam.db-shm  agentteam.db-wal
examples/: dev_team.py  multi_level_mcp.py  multi_level_team.py
skills/: code_review.md  error_handling.md  testing_strategy.md
tests/: conftest.py  test_cli.py  test_cli_presets.py  test_config.py  test_plugins.py  test_smoke.py
tests/api/: __init__.py  conftest.py  test_api_admin.py  test_api_approvals.py  test_api_approvals_robustness.py  test_api_dashboard.py  test_api_evolution.py  test_api_library.py  test_api_persistence.py  (+18 more)
web/: index.html  package-lock.json  package.json  tsconfig.app.json  vitest.config.ts
(+129 files in other folders)
