[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentteam"
version = "0.1.0"
description = "本地多智能体协作框架（迷你 AgentTeams）"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=3.0",
    "langchain-mcp-adapters>=0.3.0",
    "pydantic>=2",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sse-starlette>=2.0",
]

[project.scripts]
agentteam = "agentteam.cli:main"

[project.optional-dependencies]
qwen = ["dashscope>=1.17", "langchain-community>=0.3"]
openai = ["langchain-openai>=0.2"]
anthropic = ["langchain-anthropic>=0.2"]
ollama = ["langchain-ollama>=0.2"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27", "requests>=2.28"]

[tool.setuptools.packages.find]
include = ["agentteam*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
